# intelligent-trading-dag

./: .cursorignore  .cursorrules  .env.example  .gitignore  FILE_MANAGEMENT.md  FILE_MANAGEMENT_CN.md  LICENSE  README.md  README_CN.md  agent.py  backtest.py  config.example.yaml  config.yaml  env.example  main.py  manage_output.py  pyproject.toml  requirements.txt  run.py
.streamlit/: config.toml
backtest/: __init__.py  engine.py
config/: benchmark.example.yaml  benchmark.yaml  benchmark_phase1.example.yaml  config.example.yaml  config.yaml
core/: __init__.py  node.py  runner.py  state.py  workflow.py
data/: __init__.py  provider.py
indicators/: __init__.py  indicators.py
llm/: __init__.py  llm.py
nodes/: __init__.py  data.py  merge.py  portfolio.py  risk.py  start.py
src/trading_dag/: __init__.py  agent.py
src/trading_dag/backtest/: __init__.py  engine.py
src/trading_dag/benchmark/: __init__.py  ablation.py  baseline_simulators.py  dag_backtest_runner.py  equity_metrics.py  experiment_types.py  figures.py  initial_nav.py  phase1.py  phase1_baselines.py  phase1_dag.py  phase1_metrics.py  phase1_models.py  phase1_registry.py  phase2.py  phase2_dag.py  phase2_registry.py  suite_common.py
src/trading_dag/cli/: backtest.py  benchmark_cli_common.py  benchmark_phase1.py  benchmark_phase2.py  main.py  manage_output.py
src/trading_dag/core/: __init__.py  node.py  runner.py  state.py  workflow.py
strategies/: __init__.py  base.py  bollinger.py  macd.py  rsi.py
tests/: __init__.py
utils/: __init__.py  config.py  constants.py  helpers.py
(+44 files in other folders)
